--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@zeit/next-sass": "~1.0.1",
     "next": "~7.0.2",
+    "node-sass": "~4.9.4",
     "react": "~16.5.2",
-    "react-dom": "~16.5.2"
+    "react-dom": "~16.5.2",
+    "semantic-ui-css": "~2.4.1",
+    "semantic-ui-react": "~0.82.5"
   },
   "devDependencies": {},
   "scripts": {
