--- a/package.json
+++ b/package.json
@@ -5,18 +5,27 @@
   "main": "index.js",
   "dependencies": {
     "@zeit/next-sass": "~1.0.1",
+    "axios": "~0.18.0",
+    "connect-redis": "~3.4.0",
+    "cookie-parser": "~1.4.3",
+    "dotenv": "~6.1.0",
+    "express": "~4.16.4",
+    "express-session": "~1.15.6",
+    "formik": "~1.3.1",
+    "lodash": "~4.17.11",
+    "milliseconds": "~1.0.3",
     "next": "~7.0.2",
     "node-sass": "~4.9.4",
+    "p-props": "~1.2.0",
     "react": "~16.5.2",
     "react-dom": "~16.5.2",
     "semantic-ui-css": "~2.4.1",
     "semantic-ui-react": "~0.82.5"
   },
-  "devDependencies": {},
   "scripts": {
-    "dev": "next",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
