--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "~7.0.2",
     "node-sass": "~4.9.4",
     "p-props": "~1.2.0",
+    "prop-types": "~15.6.2",
     "react": "~16.5.2",
     "react-dom": "~16.5.2",
     "semantic-ui-css": "~2.4.1",
