--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "~0.18.0",
     "connect-redis": "~3.4.0",
     "cookie-parser": "~1.4.3",
+    "date-fns": "~1.29.0",
     "dotenv": "~6.1.0",
     "express": "~4.16.4",
     "express-session": "~1.15.6",
@@ -19,6 +20,7 @@
     "p-props": "~1.2.0",
     "prop-types": "~15.6.2",
     "react": "~16.5.2",
+    "react-day-picker": "~7.2.4",
     "react-dom": "~16.5.2",
     "semantic-ui-css": "~2.4.1",
     "semantic-ui-react": "~0.82.5"
