--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-day-picker": "~7.2.4",
     "react-dom": "~16.5.2",
     "semantic-ui-css": "~2.4.1",
-    "semantic-ui-react": "~0.82.5"
+    "semantic-ui-react": "~0.82.5",
+    "yup": "~0.26.6"
   },
   "scripts": {
     "dev": "node server.js",
