--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "~6.1.0",
     "express": "~4.16.4",
     "express-session": "~1.15.6",
+    "file-loader": "~2.0.0",
     "formik": "~1.3.1",
     "lodash": "~4.17.11",
     "milliseconds": "~1.0.3",
@@ -24,6 +25,7 @@
     "react-dom": "~16.5.2",
     "semantic-ui-css": "~2.4.1",
     "semantic-ui-react": "~0.82.5",
+    "url-loader": "~1.1.2",
     "yup": "~0.26.6"
   },
   "scripts": {
