--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "~16.5.2",
     "react-day-picker": "~7.2.4",
     "react-dom": "~16.5.2",
+    "react-intl": "~2.7.2",
     "semantic-ui-css": "~2.4.1",
     "semantic-ui-react": "~0.82.5",
     "url-loader": "~1.1.2",
