--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-eslint": "~10.0.1"
+    "babel-eslint": "~10.0.1",
+    "babel-plugin-transform-define": "~1.3.0"
   }
 }
