--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "p-props": "~1.2.0",
     "prop-types": "~15.6.2",
     "react": "~16.5.2",
+    "react-albus": "~2.0.0",
     "react-day-picker": "~7.2.4",
     "react-dom": "~16.5.2",
     "react-intl": "~2.7.2",
